--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
 
 	<groupId>com.github.robertdale</groupId>
 	<artifactId>tinkerpop-spring-boot-parent</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.3.6.RELEASE</version>
+		<version>1.5.9.RELEASE</version>
 	</parent>
 
 	<modules>
@@ -21,7 +21,7 @@
 	</modules>
 
 	<properties>
-		<tinkerpop.version>3.2.0-incubating</tinkerpop.version>
+		<tinkerpop.version>3.2.6</tinkerpop.version>
 		<java.version>1.8</java.version>
 	</properties>
 
@@ -56,16 +56,12 @@
 				<artifactId>tinkergraph-gremlin</artifactId>
 				<version>${tinkerpop.version}</version>
 			</dependency>
-			<!-- Neo4j support -->
+			<!-- embedded gremlin server for testing -->
 			<dependency>
 				<groupId>org.apache.tinkerpop</groupId>
-				<artifactId>neo4j-gremlin</artifactId>
+				<artifactId>gremlin-server</artifactId>
 				<version>${tinkerpop.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.neo4j</groupId>
-				<artifactId>neo4j-tinkerpop-api-impl</artifactId>
-				<version>0.1-2.2</version>
+				<scope>test</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
