added connection pool test

--- a/tinkerpop-spring-boot-sample/pom.xml
+++ b/tinkerpop-spring-boot-sample/pom.xml
@@ -21,12 +21,15 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-				<!-- embedded gremlin server for testing -->
+		<!-- embedded gremlin server for testing -->
 		<dependency>
 			<groupId>org.apache.tinkerpop</groupId>
 			<artifactId>gremlin-server</artifactId>
 		</dependency>
-		
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+		</dependency>
 	</dependencies>
 
 </project>
